--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
     "axios": "^0.17.0",
+    "fastify": "^0.31.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.12.5",
     "slack-node": "^0.1.8"
   },
   "engines": {
     "node": "8.9.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
